# tree-menu

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
src/config/: urls.py
src/config/settings/: base.py  local.py
src/tree_menu/menu/: admin.py  forms.py  models.py  urls.py  views.py
src/tree_menu/menu/migrations/: 0001_initial.py
src/tree_menu/menu/templates/menu/: index.html  menu.html
src/tree_menu/menu/templatetags/: menu.py
